# test-chart-ai

./: .gitignore  docker-compose.yaml
Services/chartIQ-JS/: .dockerignore  Dockerfile  README.md  chartiq-9.4.0.tgz  package-lock.json  package.json
Services/chartIQ-JS/chartiq/: active-trader-chart.html  basic-chart.html  key.js  package.json  technical-analysis-chart.html
Services/chartIQ-JS/chartiq/css/: _ciq-multi.scss  chartiq.scss  webcomponents.css
Services/chartIQ-JS/chartiq/js/: addOns.d.ts  advanced-DEV-ONLY-source.js  advanced.d.ts  advanced.js  chartiq-DEV-ONLY-source.js  chartiq.js  (+3 more)
Services/chartIQ-JS/js-promt/: ADX-DMS.txt  AccumulationDistribution.txt  MACD.txt  aroon.txt  atr.txt  awesomeOscillator.txt  balanceOfPower.txt  bollinger.txt  cci.txt  centerOfGravity.txt  chaikin.txt  chande.txt  choppiness.txt  comparisonStudies.txt  coppock.txt  darvasBox.txt  detrended.txt  disparity.txt  easeOfMovement.txt  ehlerFisher.txt  elder.txt  fractalChaos.txt  goNoGo.txt  highLowStudies.txt  ichimoku.txt  intradayMomentum.txt  keltner.txt  klinger.txt  linearRegression.txt
Services/chartIQ-python/: Dockerfile  Makefile  pyproject.toml
Services/chartIQ-python/src/app/: main.py
Services/chartIQ-python/src/app/api/v1/: router.py  service.py  views.py
Services/chartIQ-python/src/app/core/infrastructure/: config_constructor.py
Services/chartIQ-python/src/app/core/schemas/: __init__.py  study_request.py  study_response.py
Services/chartIQ-python/src/app/core/utils/: __init__.py  color.py
Services/chartIQ-python/src/app/templates/: generate_study.html
(+173 files in other folders)
